@@ -3,6 +3,7 @@ Changes since 5.0.rc1
 
 * NEW grey out key entries when corresponding plot is toggled off
 * NEW allow parenthesized expressions as call parameters
+* NEW set margins <left>, <right>, <top>, <bottom>
 * CHANGE apply "set key {no}enhanced}" to the key title
 * CHANGE scale dashlenth with line width
 * FIX wxgtk3 requires initialization of Xthreads
